--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,25 @@
-node_modules/
+# Ignore Next.js .next and Babel .cache Folders#
+.next
+.cache
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
